# ShadowsocksR_RSS_Manager

./: .gitignore  Cargo.toml  config.properties
src/: command.rs  config.rs  main.rs
src/ssr/: mod.rs
