[package]
name = "ssr_manager_rs"
version = "0.1.0"
authors = ["HoshinoTented <limbolrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking"] }
base64 = { version = "0.11.0" }
regex = { version = "1.3.3" }